--- a/insex.html
+++ b/insex.html
@@ -21,7 +21,7 @@
 
       <button class="films__btn show-more">Ещё 20 фильмов</button>
     </div>
-    <div class="container-right none">
+    <!-- <div class="container-right none">
       <button class="btn-close">
         <img src="./img/cross.svg" alt="Close" width="24" />
       </button>
@@ -43,7 +43,7 @@
           </p>
         </div>
       </div>
-    </div>
+    </div> -->
     <script src="./js/script.js"></script>
   </body>
 </html>
